--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -99,4 +99,6 @@
   <string name="preference_page_transition_speed_summary">Speed used for next/previous page transition animation</string>
   <string name="preference_reading_direction_label">Right to left reading direction</string>
   <string name="preference_reading_direction_summary">Swipe to the left to switch to next page</string>
+  <string name="preference_auto_rotate_label">Automatic orientation</string>
+  <string name="preference_auto_rotate_summary">Changes the screen orientation to best fit each page</string>
 </resources>
