--- a/res/values-gl/strings.xml
+++ b/res/values-gl/strings.xml
@@ -13,6 +13,7 @@
   <string name="licenses_waiting">Por favor, agarda mentres están a cargar as licenzas...</string>
   <string name="album_downloading">A descargar \"%s\"...</string>
   <string name="app_name">Comics Reader</string>
+  <string name="bookmark_help">Podes indicar un directorio local comezando por un / (por exemplo:  /Pictures ou /Download), ou un URL (caso de dominio.gal/comics/index.xml). Se omites o prefixo http://, engadirase automaticamente se non comeza cun /. Véxase a axuda para saber máis sobre álbums remotos.</string>
   <string name="bookmark_title">Título</string>
   <string name="bookmark_url">Cartafol ou URL</string>
   <string name="bookmarks">Marcadores</string>
@@ -22,6 +23,8 @@
   <string name="bookmarks_load">Cargar</string>
   <string name="bookmarks_remove">Eliminar</string>
   <string name="bookmarks_title">Xestor de marcadores</string>
+  <string name="browse">Explorar</string>
+  <string name="browser_title">Explorador</string>
   <string name="bytes">bytes</string>
   <string name="changelog">Rexistro de cambios</string>
   <string name="close">Pechar</string>
@@ -62,15 +65,22 @@
   <string name="preference_double_page_label">A dúas páxinas</string>
   <string name="preference_double_page_summary">Mostrar dúas páxinas a un tempo en pantalla</string>
   <string name="preference_fast_scroll_label">Desprazamento rápido</string>
+  <string name="preference_fast_scroll_summary">Permite arrastrar as miniaturas para se desprazar rapidamente pola listaxe</string>
   <string name="preference_fit_to_screen_label">Axustar á pantalla</string>
+  <string name="preference_fit_to_screen_summary">Aumentar a imaxe se é menor que a resolución da pantalla</string>
   <string name="preference_full_screen_label">Pantalla completa</string>
   <string name="preference_full_screen_summary">Agochar a barra de estado cando for posible</string>
   <string name="preference_high_quality_label">Cores de 32 bits</string>
+  <string name="preference_high_quality_summary">Aviso! Isto pode diminuír a suavidade e usar máis memoria</string>
   <string name="preference_overlay_duration_label">Número de páxina</string>
   <string name="preference_overlay_duration_summary">Duración do número de páxina en pantalla</string>
+  <string name="preference_sample_label">Escala de imaxe</string>
+  <string name="preference_sample_summary">Escala que se aplicará ao cargar unha imaxe para aforrar memoria</string>
   <string name="preference_zoom_label">Zoom</string>
+  <string name="preference_zoom_summary">Escalar páxinas</string>
   <string name="preference_category_misc">Varios</string>
   <string name="preference_about">Acerca de ComicsReader</string>
+  <string name="preference_about_summary">Versión e licenzas de terceiros</string>
   <string name="previous_page">Páxina anterior</string>
   <string name="settings">Axustes</string>
   <string name="yes">Si</string>
@@ -78,7 +88,10 @@
   <string name="password">Contrasinal</string>
   <string name="remember_password">Lembrar contrasinal</string>
   <string name="contributors_label">Colaboradores:</string>
+  <string name="contributors">- ultrapeer (Turkish translation and French typos)\n- Zufre (Spanish translation)\n- Kathjal on Transifex (Italian translation)\n- Shark103 on Transifex (Polish translation)\n- Xesusmosquera on Transifex (Galician translation)\n- Jules Blok (natural ordering of page numbers implementation)</string>
   <string name="browser_album_title">Sen título</string>
+  <string name="preference_edges_resistance_label">Bordos</string>
+  <string name="preference_edges_resistance_summary">Resistencia antes de cambiar de páxina</string>
   <string name="preference_page_transition_speed_label">Velocidade do cambio de páxina</string>
   <string name="preference_page_transition_speed_summary">Velocidade da animación do cambio de páxina</string>
   <string name="preference_reading_direction_label">Dirección de lectura de dereita a esquerda</string>
